Update .collect(Collectors.toList()) to .toList()