@@ -26,7 +26,6 @@ import java.util.Deque;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
 import javax.annotation.Nullable;
 import org.sonar.check.Rule;
@@ -98,7 +97,7 @@ public class InfiniteRecursionCheck extends PythonSubscriptionCheck {
       if (!blockRecursiveCalls.isEmpty()) {
         allRecursiveCalls.addAll(blockRecursiveCalls.stream()
           .filter(tree -> !isInsideTryBlock(tree))
-          .collect(Collectors.toList()));
+          .toList());
       } else {
         block.successors().stream().filter(pushedBlocks::add).forEach(blockToVisit::addLast);
       }
