@@ -25,7 +25,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.sonar.check.Rule;
 import org.sonar.check.RuleProperty;
@@ -77,7 +76,7 @@ public class UselessStatementCheck extends PythonSubscriptionCheck {
   private List<String> ignoredOperators() {
     if (ignoredOperatorsList == null) {
       ignoredOperatorsList = Stream.of(ignoredOperators.split(","))
-        .map(String::trim).collect(Collectors.toList());
+        .map(String::trim).toList();
     }
     return ignoredOperatorsList;
   }
